@@ -1,3 +1,7 @@
+03/20/2009
+- added noprint modifier
+- autoappend a directory separator if the xxxxx_dir definition have no trailing one
+
 03/19/2009
 - allow array definition as modifer paramter
 - changed modifier to use multi byte string funktions. 
